--- a/index.html
+++ b/index.html
@@ -89,8 +89,16 @@
     <section id="about" class="about-section">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
-                    <h1>About Section</h1>
+                <div class="col-md-7" style="background-color:#4F98C4; font-size:36px">
+                    <h1>ABOUT</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-7" style="background-color:white; font-size:36px; font-color:black; font-family:'Open Sans', san-serif; color:#B3B3B3">
+                    <p style="font-size:15px"><b>ABOUT ROOTS</b> <br><br>Youth Mental Health Alliance is a student run organization that aims to enhance support, knowledge and access to mental health services for students in Montreal. As students we believe that the best way to promote mental health and eliminate the stigma that is associated with it is through education and understanding of the issues that mental health encompasses. Because of this, we’ve created Roots on the basis of three pillars – education, support and communication. <br><br>We aim to achieve this through outreach programs that are meant to educate students both on University campuses and in Montreal. Our outreach programs are specifically targeted towards the segment of the population with the most potential, and with the greatest ability to drive change: the youth. By educating the youth, we are able to eliminate the stigma surrounding mental health from the ground up, so that young people may help their parents and their elders to understand the true gravity of mental illness. By focusing on the youth, we are able to provide a forum to discuss topics which many youth might otherwise be afraid to bring up. <br><br>We hope that our initiative will inspire youth who might be dealing with mental illness to have the confidence and the initiative to make a change as well. 
+</p>
+                    <p style="font-size:15px"><b>ABOUT MENTAL HEALTH</b> <br><br> Maecenas vitae turpis libero. Phasellus finibus, massa ac venenatis tempus, nibh ex vestibulum lacus, nec mollis niNam ultrices nisi ex, at iaculis ex eleifend quis. Maecenas vitae turpis libero. Phasellus finibus, massa ac venenatis tempus, nibh ex vestibulum lacus, nec mollis niNam ultrices nisi ex, at iaculis ex eleifend quis. </p>
+                </div>
                 </div>
             </div>
         </div>
@@ -101,7 +109,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>Services Section</h1>
+                    <h1>Programs Section</h1>
                 </div>
             </div>
         </div>
@@ -111,7 +119,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>Services Section</h1>
+                    <h1>Sponsors Section</h1>
                 </div>
             </div>
         </div>
@@ -121,7 +129,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>Contact Section</h1>
+                    <h1>Resources Section</h1>
                 </div>
             </div>
         </div>
