--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand page-scroll" href="#page-top">ROOTS</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -76,10 +76,11 @@
     <section id="intro" class="intro-section">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
-                    <h1>Scrolling Nav</h1>
-                    <p><strong>Usage Instructions:</strong> Make sure to include the <code>scrolling-nav.js</code>, <code>jquery.easing.min.js</code>, and <code>scrolling-nav.css</code> files. To make a link smooth scroll to another section on the page, give the link the <code>.page-scroll</code> class and set the link target to a corresponding ID on the page.</p>
-                    <a class="btn btn-default page-scroll" href="#about">Click Me to Scroll Down!</a>
+                <div class="col-md-3">
+                    <img src="Roots-Logo.jpg" alt="Logo" style="overflow:hidden;">
+                </div>
+                <div class="col-md-offset-3">
+                    <img src="Roots-Quote.jpg" alt="Quote Collage" style="overflow:hidden;">
                 </div>
             </div>
         </div>
