--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
     <!-- About Section -->
     <section id="about" class="about-section">
         <div class="container">
-            <div class="row">
+            <div class="row" style:"padding:2px;">
                 <div class="col-md-9" style="background-color:#4F98C4; font-size:36px">
                     <h3>ABOUT</h3>
                 </div>
             </div>
             <div class="row" style="text-align:justify;">
-                <div class="col-md-9" style="background-color:white; font-size:14px; color:black; font-family:'Open Sans', san-serif;">
+                <div class="col-md-9" style="padding: 5px; background-color:white; font-size:14px; color:black; font-family:'Open Sans', san-serif;">
                     <p><span style="color:#26E2E4; font-size:18px;"><b>ABOUT ROOTS</b></span> <br><br>Youth Mental Health Alliance is a student run organization that aims to enhance support, knowledge and access to mental health services for students in Montreal. As students we believe that the best way to promote mental health and eliminate the stigma that is associated with it is through education and understanding of the issues that mental health encompasses. Because of this, we’ve created Roots on the basis of three pillars – education, support and communication. <br><br>We aim to achieve this through outreach programs that are meant to educate students both on University campuses and in Montreal. Our outreach programs are specifically targeted towards the segment of the population with the most potential, and with the greatest ability to drive change: the youth. By educating the youth, we are able to eliminate the stigma surrounding mental health from the ground up, so that young people may help their parents and their elders to understand the true gravity of mental illness. By focusing on the youth, we are able to provide a forum to discuss topics which many youth might otherwise be afraid to bring up. <br><br>We hope that our initiative will inspire youth who might be dealing with mental illness to have the confidence and the initiative to make a change as well. 
 </p>
                     <p><span style="color:#26E2E4; font-size:18px;"><b>ABOUT MENTAL HEALTH</b></span> <br><br> Maecenas vitae turpis libero. Phasellus finibus, massa ac venenatis tempus, nibh ex vestibulum lacus, nec mollis niNam ultrices nisi ex, at iaculis ex eleifend quis. Maecenas vitae turpis libero. Phasellus finibus, massa ac venenatis tempus, nibh ex vestibulum lacus, nec mollis niNam ultrices nisi ex, at iaculis ex eleifend quis. </p>
@@ -108,31 +108,65 @@
     <!-- Programs Section -->
     <section id="programs" class="programs-section">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1>Programs Section</h1>
+            <div class="row" style:"padding:2px;">
+                <div class="col-md-9" style="background-color:#4F98C4; font-size:36px">
+                    <h3>PROGRAMS</h3>
                 </div>
             </div>
+            <div class="row" style="text-align:justify;">
+                <div class="col-md-9" style="padding: 5px; background-color:white; font-size:14px; color:black; font-family:'Open Sans', san-serif;">
+                    <p><span style="color:#26E2E4; font-size:18px;"><b>ABOUT ROOTS</b></span> <br><br>Youth Mental Health Alliance is a student run organization that aims to enhance support, knowledge and access to mental health services for students in Montreal. As students we believe that the best way to promote mental health and eliminate the stigma that is associated with it is through education and understanding of the issues that mental health encompasses. Because of this, we’ve created Roots on the basis of three pillars – education, support and communication. <br><br>We aim to achieve this through outreach programs that are meant to educate students both on University campuses and in Montreal. Our outreach programs are specifically targeted towards the segment of the population with the most potential, and with the greatest ability to drive change: the youth. By educating the youth, we are able to eliminate the stigma surrounding mental health from the ground up, so that young people may help their parents and their elders to understand the true gravity of mental illness. By focusing on the youth, we are able to provide a forum to discuss topics which many youth might otherwise be afraid to bring up. <br><br>We hope that our initiative will inspire youth who might be dealing with mental illness to have the confidence and the initiative to make a change as well. 
+</p>
+                    <p><span style="color:#26E2E4; font-size:18px;"><b>ABOUT MENTAL HEALTH</b></span> <br><br> Maecenas vitae turpis libero. Phasellus finibus, massa ac venenatis tempus, nibh ex vestibulum lacus, nec mollis niNam ultrices nisi ex, at iaculis ex eleifend quis. Maecenas vitae turpis libero. Phasellus finibus, massa ac venenatis tempus, nibh ex vestibulum lacus, nec mollis niNam ultrices nisi ex, at iaculis ex eleifend quis. </p>
+                </div>
+                </div>
         </div>
     </section>
     <!-- Sponsors Section -->
     <section id="sponsors" class="sponsors-section">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1>Sponsors Section</h1>
+            <div class="row" style:"padding:2px;">
+                <div class="col-md-9" style="background-color:#4F98C4; font-size:36px">
+                    <h3>SPONSORS/COLLABORATORS</h3>
                 </div>
             </div>
+            <div class="row" style="text-align:justify;">
+                <div class="col-md-9" style="padding: 5px; background-color:white; font-size:14px; color:black; font-family:'Open Sans', san-serif;">
+                    <p><span style="color:#26E2E4; font-size:18px;"><b>SPONSORS</b></span> <br><br> 
+                        <b>Milton-Parc Recreation Center<br></b>
+                        One of our missions is to inform youth about mental well-being and local services, and in particular, we’re trying to reach out to neighbourhoods in Montreal that are of a lower socioeconomic status. To help us reach our goal, we are proud to work with the Milton Park Recreation Association (MPRA). In particular, we value and support MPRA’s mission which is “to bridge differences and bring people closer together by offering a wide variety of affordable courses and programs which contribute to individual growth and learning, and by building partnerships with individuals and organizations in the community to help achieve these objectives.”
+<br><br>MRPA has kindly offered us a venue at Galeries du Parc for all of our future workshops. We’re so glad to be able to work with this association to make mental health services more accessible to youth and increase awareness of local programs and services.
+For more information on the Milton Park Recreation Association, please visit <a href="http://www.miltonpark.org/" target="_blank">their <u>website</u></a>.</p>
+                        <b>Educational Sponsors</b><br>
+<p style="font-size:15px">Thank you to Monster Academy, the Canadian Mental Health Organization and COCo Montreal for providing us with workshop guides and resources to help us fulfill our objectives. For more information, visit the websites of:<br>
+<center><a href="https://monsteracademymtl.wordpress.com/" target="_blank"><u>Monster Academy</u></a><br>
+<a href="http://www.cmha.ca/" target="_blank"><u>Canadian Mental Health Organization</u></a><br>
+<a href="http://coco-net.org/" target="_blank"><u>COCo Montreal</u></a></p>
+                    <p><span style="color:#26E2E4; font-size:18px;"><b>COLLABORATORS</b></span> <br><br> More information coming soon! </p>
+                </div>
+                </div>
         </div>
     </section>
+    
+    <b></b></br>
+<p style="font-size:15px"></div>
+                </div>
+            <div class="row">
+                 <div class="col-md-10 col-md-offset-1">
+                    
     <!-- Resources Section -->
     <section id="resources" class="resources-section">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1>Resources Section</h1>
+            <div class="row" style:"padding:2px;">
+                <div class="col-md-9" style="background-color:#4F98C4; font-size:36px">
+                    <h3>RESOURCES</h3>
                 </div>
             </div>
+            <div class="row" style="text-align:justify;">
+                <div class="col-md-9" style="padding: 5px; background-color:white; font-size:14px; color:black; font-family:'Open Sans', san-serif;">
+                    <p>Part of Roots’ core mandate is to make mental health services more accessible to youth and increase their awareness of local programs and services. The following is a list of just a few of the many mental health resources available for youth in Montreal. Click their icon to read more about them. </p>
+                </div>
+                </div>
         </div>
     </section>
 
