--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ For more information on the Milton Park Recreation Association, please visit <a 
 <center><a href="https://monsteracademymtl.wordpress.com/" target="_blank"><u>Monster Academy</u></a><br>
 <a href="http://www.cmha.ca/" target="_blank"><u>Canadian Mental Health Organization</u></a><br>
 <a href="http://coco-net.org/" target="_blank"><u>COCo Montreal</u></a></p>
-                    <p><span style="color:#26E2E4; font-size:18px;"><b>COLLABORATORS</b></span> <br><br> More information coming soon! </p>
+                    <p><span style="color:#26E2E4; font-size:18px; text-align:justify"><b>COLLABORATORS</b></span> <br><br> More information coming soon! </p>
                 </div>
                 </div>
         </div>
