--- a/index.html
+++ b/index.html
@@ -57,10 +57,7 @@
                         <a class="page-scroll" href="#programs">Programs</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#Sponsors">Sponsors</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#Sponsors">Sponsors</a>
+                        <a class="page-scroll" href="#sponsors">Sponsors</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#resources">Resources</a>
