--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
-                    <img src="Roots-Logo.jpg" alt="Logo" style="overflow:hidden;">
+                    <img src="Roots_Logo.jpg" alt="Logo" style="overflow:hidden;">
                 </div>
                 <div class="col-md-offset-3">
                     <img src="Roots-Quote.jpg" alt="Quote Collage" style="overflow:hidden;">
