--- a/index.html
+++ b/index.html
@@ -74,10 +74,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
-                    <img src="Roots_Logo.jpg" alt="Logo" style="overflow:hidden;">
+                    <div>
+                        <img src="Roots_Logo.jpg" alt="Logo" style="overflow:hidden; width: 300px; height: 300px;">
+                    </div>
                 </div>
                 <div class="col-md-offset-3">
-                    <img src="Roots-Quote.jpg" alt="Quote Collage" style="overflow:hidden;">
+                    <div>
+                        <img src="Roots-Quote.jpg" alt="Quote Collage" style="overflow:hidden; width:900px; height: 300px; ">
+                    </div>
                 </div>
             </div>
         </div>
