--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
     <!-- Intro Section -->
     <section id="intro" class="intro-section">
         <div class="container">
-            <div class="row">
-                <div class="col-md-3">
+            <div class="row" style="padding:15px;">
+                <div class="col-md-3" style="padding:2px; width: 300px; height: 300px; border:solid;">
                     <div>
-                        <img src="Roots_Logo.jpg" alt="Logo" style="overflow:hidden; width: 300px; height: 300px;">
+                        <img src="Roots_Logo.jpg" alt="Logo" style="overflow:hidden; width:100%; height: 100%; object-fit:contain;">
                     </div>
                 </div>
-                <div class="col-md-offset-3">
+                <div class="col-md-offset-3" style="padding:2px; width: 300px; height: 300px; border:solid;">
                     <div>
-                        <img src="Roots-Quote.jpg" alt="Quote Collage" style="overflow:hidden; width:900px; height: 300px; ">
+                        <img src="Roots-Quote.jpg" alt="Quote Collage" style="overflow:hidden; width:100%; height: 100%; object-fit:contain; ">
                     </div>
                 </div>
             </div>
