--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
         <div class="container" style="padding:30px;">
             <div class="row" style="padding:15px;">
                 <div class="col-md-3" style="padding:2px; height: 300px; border:solid;">
-                        <img src="Roots_Logo.jpg" alt="Logo" style="overflow:hidden; width:100%; height: 100%; object-fit:contain;">
+                        <img src="Roots_Logo.jpg" alt="Logo" style="overflow:hidden; width:100%; height: 100%; ">
                 </div>
                 <div class="col-md-offset-3" style="padding:2px; height: 300px; border:solid;">
-                        <img src="Roots-Quote.jpg" alt="Quote Collage" style="overflow:hidden; width:100%; height:100%; object-fit:contain;">
+                        <img src="Roots-Quote.jpg" alt="Quote Collage" style="overflow:hidden; width:100%; height:100%;">
                 </div>
             </div>
         </div>
