--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
                 <div class="col-md-9" style="background-color:#4F98C4; font-size:36px; border:solid;">
                     <h3>ABOUT</h3>
                 </div>
+                <div class="col-md-offset-9" style="background-color:#26E2E4; font-size:36px; border:solid; position:fixed;">
+                    <h4>Application Deadline</h4>
+                    <h2 style="text-decoration:strong;">Jan - Apr <br> `2016</h2>
+                </div>
             </div>
             <div class="row" style="text-align:justify; ">
                 <div class="col-md-9" style="padding: 5px; background-color:white; font-size:14px; color:black; font-family:'Open Sans', san-serif; border:solid;">
