--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="Tong Niu" content="Demo Site for Roots 2016">
 
-    <title>Roots 2016</title>
+    <title>Roots 2016!</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -70,7 +70,7 @@
     </nav>
 
     <!-- Intro Section -->
-    <section id="intro" class="intro-section">
+    <section id="intro" class="intro-section" style="padding: 10px;">
         <div class="container" style="padding:30px;">
             <div class="row" style="padding:15px;">
                 <div class="col-md-3" style="padding:2px; height: 300px; border:solid;">
