--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 
     <!-- Intro Section -->
     <section id="intro" class="intro-section" style="padding: 10px;">
-        <div class="container" style="padding:30px;">
-            <div class="row" style="padding:15px;">
+        <div class="container">
+            <div class="row" style="padding:15px; padding-top:70px;">
                 <div class="col-md-3" style="padding:2px; height: 300px; border:solid;">
                         <img src="Roots_Logo.jpg" alt="Logo" style="overflow:hidden; width:100%; height: 100%; ">
                 </div>
