--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
                 <div class="col-md-9" style="background-color:#4F98C4; font-size:36px; border:solid;">
                     <h3>ABOUT</h3>
                 </div>
-                <div class="col-md-offset-9" style="background-color:#26E2E4; font-size:36px; border:solid; position:fixed;">
-                    <h4>Application Deadline</h4>
-                    <h2 style="text-decoration:strong;">Jan - Apr <br> `2016</h2>
+                <div class="col-md-offset-9" style="background-color:#26E2E4; font-size:36px; color: #B3B3B3; position:fixed; width:300px;">
+                    <h3>Application Deadline:</h3>
+                    <h1 style="text-decoration:strong;">JAN. - APR. <br> 2016</h1>
                 </div>
             </div>
             <div class="row" style="text-align:justify; ">
