--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                 <div class="col-md-9" style="background-color:#4F98C4; font-size:36px; border:solid;">
                     <h3>ABOUT</h3>
                 </div>
-                <div class="col-md-offset-8" style="background-color:#26E2E4; font-size:36px; color: black; position:fixed; width:300px;">
-                    <h3>Application Deadline:</h3>
+                <div class="col-md-offset-9" style="background-color:#26E2E4; font-size:36px; color: black; position:fixed; width:100%;">
+                    <h3><i class="glyphicon-calendar"></i>Application Deadline:</h3>
                     <h1 style="text-decoration:strong;">JAN. - APR. <br> 2016</h1>
                     <a href=# class="btn btn-lg btn-outline">
                         Apply Now!
