--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <!-- Custom CSS -->
     <link href="css/scrolling-nav.css" rel="stylesheet">
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -91,7 +92,7 @@
                     <h3>ABOUT</h3>
                 </div>
                 <div class="col-md-offset-9" style="background-color:#26E2E4; font-size:36px; color: black; position:fixed; width:100%;">
-                    <h3><i class="glyphicon-calendar"></i>Application Deadline:</h3>
+                    <h3><i class="fa-calendar"></i>Application Deadline:</h3>
                     <h1 style="text-decoration:strong;">JAN. - APR. <br> 2016</h1>
                     <a href=# class="btn btn-lg btn-outline">
                         Apply Now!
