--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="Tong Niu" content="Demo Site for Roots 2016">
 
-    <title>Roots 2016!</title>
+    <title>Roots 2016</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
