--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="Tong Niu" content="Demo Site for Roots 2016">
 
-    <title>Roots 2016</title>
+    <title>Roots 2016!</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -91,22 +91,22 @@
                 <div class="col-md-9" style="background-color:#4F98C4; font-size:36px; border:solid;">
                     <h3>ABOUT</h3>
                 </div>
-                <div class="col-md-offset-9" style="background-color:#26E2E4; font-size:36px; color: black; position:fixed; width:100%;">
+                <div class="col-md-3 col-md-offset-9" style="background-color:#26E2E4; font-size:36px; color: black; position:fixed; width:100%;">
                     <h3><i class="fa-calendar"></i>Application Deadline:</h3>
                     <h1 style="text-decoration:strong;">JAN. - APR. <br> 2016</h1>
                     <a href=# class="btn btn-lg btn-outline">
                         Apply Now!
                     </a>
                 </div>
-                </div>
+            </div>
             <div class="row" style="text-align:justify; ">
                 <div class="col-md-9" style="padding: 5px; background-color:white; font-size:14px; color:black; font-family:'Open Sans', san-serif; border:solid;">
                     <p><span style="color:#26E2E4; font-size:18px;"><b>ABOUT ROOTS</b></span> <br><br>Youth Mental Health Alliance is a student run organization that aims to enhance support, knowledge and access to mental health services for students in Montreal. As students we believe that the best way to promote mental health and eliminate the stigma that is associated with it is through education and understanding of the issues that mental health encompasses. Because of this, we’ve created Roots on the basis of three pillars – education, support and communication. <br><br>We aim to achieve this through outreach programs that are meant to educate students both on University campuses and in Montreal. Our outreach programs are specifically targeted towards the segment of the population with the most potential, and with the greatest ability to drive change: the youth. By educating the youth, we are able to eliminate the stigma surrounding mental health from the ground up, so that young people may help their parents and their elders to understand the true gravity of mental illness. By focusing on the youth, we are able to provide a forum to discuss topics which many youth might otherwise be afraid to bring up. <br><br>We hope that our initiative will inspire youth who might be dealing with mental illness to have the confidence and the initiative to make a change as well. 
 </p>
                     <p><span style="color:#26E2E4; font-size:18px;"><b>ABOUT MENTAL HEALTH</b></span> <br><br> Maecenas vitae turpis libero. Phasellus finibus, massa ac venenatis tempus, nibh ex vestibulum lacus, nec mollis niNam ultrices nisi ex, at iaculis ex eleifend quis. Maecenas vitae turpis libero. Phasellus finibus, massa ac venenatis tempus, nibh ex vestibulum lacus, nec mollis niNam ultrices nisi ex, at iaculis ex eleifend quis. </p>
                 </div>
-                </div>
             </div>
+        </div>
     </section>
 
     <!-- Programs Section -->
