--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="Tong Niu" content="Demo Site for Roots 2016">
 
-    <title>Roots 2016!</title>
+    <title>Roots 2016</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -92,9 +92,9 @@
                     <h3>ABOUT</h3>
                 </div>
                 <div class="col-md-3 col-md-offset-9" style="background-color:#26E2E4; font-size:36px; color: black; position:fixed; width:100%;">
-                    <h3><i class="fa-calendar"></i>Application Deadline:</h3>
+                    <h3>Application Deadline:</h3>
                     <h1 style="text-decoration:strong;">JAN. - APR. <br> 2016</h1>
-                    <a href=# class="btn btn-lg btn-outline">
+                    <a href="#" class="btn btn-lg btn-outline">
                         Apply Now!
                     </a>
                 </div>
