--- a/index.html
+++ b/index.html
@@ -73,7 +73,10 @@
     <!-- Intro Section -->
     <section id="intro" class="intro-section" style="padding: 10px;">
         <div class="container">
-            <div class="row" style="padding:15px; padding-top:70px;">
+            <div class="row" style:"padding:50px;">
+                <br>
+            </div>
+            <div class="row" style="padding:15px; padding-top:70px; background-color:white; height:500px; width:100%">
                 <div class="col-md-3" style="padding:2px; height: 300px; border:solid;">
                         <img src="Roots_Logo.jpg" alt="Logo" style="overflow:hidden; width:100%; height: 100%; ">
                 </div>
@@ -92,7 +95,7 @@
                     <h3>ABOUT</h3>
                 </div>
                 <div class="col-md-3 col-md-offset-9" style="background-color:#26E2E4; font-size:36px; color: black; position:fixed;">
-                    <h3><i class="fa-calendar"></i>Application Deadline:</h3>
+                    <h3><i class="fa fa-calendar"></i>Application Deadline:</h3>
                     <h1 style="text-decoration:strong;">JAN. - APR. <br> 2016</h1>
                     <a href="#" class="btn btn-lg btn-outline">
                         Apply Now!
