--- a/index.html
+++ b/index.html
@@ -91,15 +91,15 @@
     <section id="about" class="about-section">
         <div class="container">
             <div class="row" style:"padding:2px;">
-                <div class="col-md-9" style="background-color:#4F98C4; font-size:36px; border:solid;">
-                    <h3>ABOUT</h3>
-                </div>
-                <div class="col-md-3 col-md-offset-9" style="background-color:#26E2E4; font-size:36px; color: black; position:fixed;">
-                    <h3><i class="fa fa-calendar"></i>Application Deadline:</h3>
+                <div class="col-md-3 col-md-offset-8" style="background-color:#26E2E4; font-size:36px; color: black; border:solid; position:fixed;">
+                    <h3><i class="fa fa-calendar"></i> Application Deadline:</h3>
                     <h1 style="text-decoration:strong;">JAN. - APR. <br> 2016</h1>
                     <a href="#" class="btn btn-lg btn-outline">
                         Apply Now!
                     </a>
+                </div>
+                <div class="col-md-9" style="background-color:#4F98C4; font-size:36px; border:solid;">
+                    <h3>ABOUT</h3>
                 </div>
             </div>
             <div class="row" style="text-align:justify; ">
