--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <section id="about" class="about-section">
         <div class="container">
             <div class="row" style:"padding:2px;">
-                <div class="col-md-3 col-md-offset-8" style="background-color:#26E2E4; font-size:36px; color: black; border:solid; position:fixed;">
+                <div class="col-md-2 col-md-offset-8" style="background-color:#26E2E4; font-size:36px; color: black; border:solid; position:relative;">
                     <h3><i class="fa fa-calendar"></i> Application Deadline:</h3>
                     <h1 style="text-decoration:strong;">JAN. - APR. <br> 2016</h1>
                     <a href="#" class="btn btn-lg btn-outline">
