--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="Tong Niu" content="Demo Site for Roots 2016">
 
-    <title>Roots 2016!</title>
+    <title>Roots 2016</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -91,7 +91,7 @@
     <section id="about" class="about-section">
         <div class="container">
             <div class="row" style:"padding:2px;">
-                <div class="col-md-2 col-md-offset-8" style="background-color:#26E2E4; font-size:36px; color: black; border:solid; position:relative;">
+                <div class="col-md-offset-8" style="width: 200px; background-color:#26E2E4; font-size:36px; color: black; border:solid; position:fixed;">
                     <h3><i class="fa fa-calendar"></i> Application Deadline:</h3>
                     <h1 style="text-decoration:strong;">JAN. - APR. <br> 2016</h1>
                     <a href="#" class="btn btn-lg btn-outline">
