--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
     <!-- Navigation -->
+    <div>
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header page-scroll">
@@ -69,9 +70,10 @@
         </div>
         <!-- /.container -->
     </nav>
-
+</div>
     <!-- Intro Section -->
-    <section id="intro" class="intro-section" style="padding: 10px;">
+<div style="padding:10px;"
+    <section id="intro" class="intro-section">
         <div class="container">
             <div class="row" style:"padding:50px;">
                 <br>
@@ -91,7 +93,7 @@
     <section id="about" class="about-section">
         <div class="container">
             <div class="row" style:"padding:2px;">
-                <div class="col-md-offset-8" style="width: 200px; background-color:#26E2E4; font-size:36px; color: black; border:solid; position:fixed;">
+                <div class="col-md-offset-8" style="width: 250px; background-color:#26E2E4; font-size:36px; color: black; border:solid; position:fixed;">
                     <h3><i class="fa fa-calendar"></i> Application Deadline:</h3>
                     <h1 style="text-decoration:strong;">JAN. - APR. <br> 2016</h1>
                     <a href="#" class="btn btn-lg btn-outline">
@@ -209,6 +211,7 @@ For more information on the Milton Park Recreation Association, please visit <a 
             </div>
         </div>
     </footer>
+</div>
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
