--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </nav>
 </div>
     <!-- Intro Section -->
-<div style="padding:10px;"
+<div style="padding-top:10px;"
     <section id="intro" class="intro-section">
         <div class="container">
             <div class="row" style:"padding:50px;">
