--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <br>
             </div>
             <div class="col-md-12">
-            <div class="row" style="padding:15px; padding-top:70px; background-color:white; height:500px; width:100%">
+            <div class="row" style="padding:15px; padding-top:70px; height:350px; width:100%">
                 <div class="col-md-3" style="padding:2px; height: 300px; border:solid;">
                         <img src="Roots_Logo.jpg" alt="Logo" style="overflow:hidden; width:100%; height: 100%; ">
                 </div>
