--- a/index.html
+++ b/index.html
@@ -72,14 +72,9 @@
     </nav>
 </div>
     <!-- Intro Section -->
-<div style="padding-top:10px;">
     <section id="intro" class="intro-section">
-        <div class="container">
-            <div class="row" style:"padding:50px;">
-                <br>
-            </div>
-            <div class="col-md-12">
-            <div class="row" style="padding:15px; padding-top:70px; height:350px; width:100%">
+        <div class="container" style="width:100vw;">
+            <div class="row" style="padding:15px; padding-top:70px; height:350px;">
                 <div class="col-md-3" style="padding:2px; height: 300px; border:solid;">
                         <img src="Roots_Logo.jpg" alt="Logo" style="overflow:hidden; width:100%; height: 100%; ">
                 </div>
@@ -87,7 +82,6 @@
                         <img src="Roots-Quote.jpg" alt="Quote Collage" style="overflow:hidden; width:100%; height:100%;">
                 </div>
             </div>
-        </div>
         </div>
     </section>
     <!-- About Section -->
@@ -212,7 +206,6 @@ For more information on the Milton Park Recreation Association, please visit <a 
             </div>
         </div>
     </footer>
-</div>
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
 
