--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 </div>
     <!-- Intro Section -->
     <section id="intro" class="intro-section">
-        <div class="container" style="width:100vw;">
-            <div class="row" style="padding:15px; margin-top:70px; height:350px;">
+        <div class="container" style="width:100vw; padding:0px;">
+            <div class="row" style="margin-top:70px; height:350px;">
                 <div class="col-md-3" style="padding:2px; height: 300px; border:solid;">
                         <img src="Roots_Logo.jpg" alt="Logo" style="overflow:hidden; width:100%; height: 100%; ">
                 </div>
