--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <section id="intro" class="intro-section">
         <div class="container" style="width:100vw; padding:0px;">
             <div class="row" style="margin-top:70px; height:350px;">
-                <div class="col-md-3" style="padding:2px; height: 300px; border:solid;">
+                <div class="col-md-3" style="height: 300px; ">
                         <img src="Roots_Logo.jpg" alt="Logo" style="overflow:hidden; width:100%; height: 100%; ">
                 </div>
                 <div class="col-md-offset-3" style="padding:2px; height: 300px; border:solid;">
