--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         Apply Now!
                     </a>
                 </div>
-                <div class="col-md-9" style="background-color:#4F98C4; font-size:36px; border:solid;">
+                <div class="col-md-9" style="background-color:#4F98C4; font-size:36px;">
                     <h3>ABOUT</h3>
                 </div>
             </div>
