--- a/index.html
+++ b/index.html
@@ -113,12 +113,12 @@
     <section id="programs" class="programs-section">
         <div class="container">
             <div class="row" style:"padding:2px;">
-                <div class="col-md-9" style="background-color:#4F98C4; font-size:36px; border:solid;">
+                <div class="col-md-9" style="background-color:#4F98C4; font-size:36px;">
                     <h3>PROGRAMS</h3>
                 </div>
             </div>
             <div class="row" style="text-align:justify;">
-                <div class="col-md-9" style="padding: 5px; background-color:white; font-size:14px; color:black; font-family:'Open Sans', san-serif; border:solid;">
+                <div class="col-md-9" style="padding: 5px; background-color:white; font-size:14px; color:black; font-family:'Open Sans', san-serif; ">
                     <p><span style="color:#26E2E4; font-size:18px;"><b>PROGRAM 1</b></span> <br><br> MORE INFO COMING SOON!</p>
                     <p><span style="color:#26E2E4; font-size:18px;"><b>PROGRAM 2</b></span> <br><br> MORE INFO COMING SOON!</p>
                 </div>
@@ -129,12 +129,12 @@
     <section id="sponsors" class="sponsors-section">
         <div class="container">
             <div class="row" style:"padding:2px; ">
-                <div class="col-md-9" style="background-color:#4F98C4; font-size:36px; border:solid;">
+                <div class="col-md-9" style="background-color:#4F98C4; font-size:36px; ">
                     <h3>SPONSORS/COLLABORATORS</h3>
                 </div>
             </div>
             <div class="row" style="text-align:justify;">
-                <div class="col-md-9" style="padding: 5px; background-color:white; font-size:14px; color:black; font-family:'Open Sans', san-serif; border:solid;">
+                <div class="col-md-9" style="padding: 5px; background-color:white; font-size:14px; color:black; font-family:'Open Sans', san-serif; ">
                     <p><span style="color:#26E2E4; font-size:18px;"><b>SPONSORS</b></span> <br><br> 
                         <b>Milton-Parc Recreation Center<br></b>
                         One of our missions is to inform youth about mental well-being and local services, and in particular, we’re trying to reach out to neighbourhoods in Montreal that are of a lower socioeconomic status. To help us reach our goal, we are proud to work with the Milton Park Recreation Association (MPRA). In particular, we value and support MPRA’s mission which is “to bridge differences and bring people closer together by offering a wide variety of affordable courses and programs which contribute to individual growth and learning, and by building partnerships with individuals and organizations in the community to help achieve these objectives.”
@@ -157,12 +157,12 @@ For more information on the Milton Park Recreation Association, please visit <a 
     <section id="resources" class="resources-section">
         <div class="container">
             <div class="row" style:"padding:2px;">
-                <div class="col-md-9" style="background-color:#4F98C4; font-size:36px; border:solid;">
+                <div class="col-md-9" style="background-color:#4F98C4; font-size:36px; ">
                     <h3>RESOURCES</h3>
                 </div>
             </div>
             <div class="row" style="text-align:justify;">
-                <div class="col-md-9" style="padding: 5px; background-color:white; font-size:14px; color:black; font-family:'Open Sans', san-serif; border:solid;">
+                <div class="col-md-9" style="padding: 5px; background-color:white; font-size:14px; color:black; font-family:'Open Sans', san-serif; ">
                     <p>Part of Roots’ core mandate is to make mental health services more accessible to youth and increase their awareness of local programs and services. The following is a list of just a few of the many mental health resources available for youth in Montreal. Click their icon to read more about them. </p>
                 </div>
                 </div>
