--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         Apply Now!
                     </a>
                 </div>
-                <div class="col-md-9" style="background-color:#4F98C4; font-size:36px;">
+                <div class="col-md-9" style="background-color:#4F98C4; font-size:36px; padding:7px 0px 9px 38px; margin: 0 0 20px 0;">
                     <h3>ABOUT</h3>
                 </div>
             </div>
@@ -113,7 +113,7 @@
     <section id="programs" class="programs-section">
         <div class="container">
             <div class="row" style:"padding:2px;">
-                <div class="col-md-9" style="background-color:#4F98C4; font-size:36px;">
+                <div class="col-md-9" style="background-color:#4F98C4; font-size:36px; padding:7px 0px 9px 38px; margin: 0 0 20px 0;">
                     <h3>PROGRAMS</h3>
                 </div>
             </div>
@@ -129,7 +129,7 @@
     <section id="sponsors" class="sponsors-section">
         <div class="container">
             <div class="row" style:"padding:2px; ">
-                <div class="col-md-9" style="background-color:#4F98C4; font-size:36px; ">
+                <div class="col-md-9" style="background-color:#4F98C4; font-size:36px; padding:7px 0px 9px 38px; margin: 0 0 20px 0;">
                     <h3>SPONSORS/COLLABORATORS</h3>
                 </div>
             </div>
@@ -157,7 +157,7 @@ For more information on the Milton Park Recreation Association, please visit <a 
     <section id="resources" class="resources-section">
         <div class="container">
             <div class="row" style:"padding:2px;">
-                <div class="col-md-9" style="background-color:#4F98C4; font-size:36px; ">
+                <div class="col-md-9" style="background-color:#4F98C4; font-size:36px; padding:7px 0px 9px 38px; margin: 0 0 20px 0;">
                     <h3>RESOURCES</h3>
                 </div>
             </div>
