--- a/index.html
+++ b/index.html
@@ -121,13 +121,13 @@
             <div class="row" style="text-align:justify;">
                 <div class="col-md-9" style="padding: 5px; background-color:white; font-size:14px; color:black; font-family:'Open Sans', san-serif; ">
                     <div class="col-md-3">
-                        <i class="fa fa-product-hunt"></i>
+                        <i class="fa fa-product-hunt style="font-size:50px;"></i>
                     </div>
-                    <div class="col-md-offset-3 col-md-3">
-                        <i class="fa fa-product-hunt"></i>
+                    <div class="col-md-3">
+                        <i class="fa fa-product-hunt style="font-size:50px;"></i>
                     </div>
-                    <div class="col-md-offset-6 col-md-3">
-                        <i class="fa fa-product-hunt"></i>
+                    <div class="col-md-3">
+                        <i class="fa fa-product-hunt" style="font-size:50px;"></i>
                     </div>
                     <p><span style="color:#26E2E4; font-size:18px;"><b>PROGRAM 1</b></span> <br><br> MORE INFO COMING SOON!</p>
                     <p><span style="color:#26E2E4; font-size:18px;"><b>PROGRAM 2</b></span> <br><br> MORE INFO COMING SOON!</p>
