--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
     <section id="about" class="about-section">
         <div class="container">
             <div class="row" style:"padding:2px;">
-                <div class="col-md-offset-8" style="width: 250px; background-color:#26E2E4; font-size:36px; color: black; position:fixed;">
+                <div class="col-md-offset-8" style="width: 250px; background-color:#25c5df; font-size:36px; color: black; position:fixed;">
                     <h3><i class="fa fa-calendar"></i> Application Deadline:</h3>
                     <h1 style="text-decoration:strong;">JAN. - APR. <br> 2016</h1>
                     <a href="#" class="btn btn-lg btn-outline">
                         Apply Now!
                     </a>
                 </div>
-                <div class="col-md-9" style="background-color:#4F98C4; font-size:36px; padding:7px 0px 9px 38px; margin: 0 0 20px 0;">
+                <div class="col-md-9" style="background-color:#2d5d83; font-size:36px; padding:7px 0px 9px 38px; margin: 0 0 20px 0;">
                     <h3>ABOUT</h3>
                 </div>
             </div>
@@ -114,7 +114,7 @@
     <section id="programs" class="programs-section">
         <div class="container">
             <div class="row" style:"padding:2px;">
-                <div class="col-md-9" style="background-color:#4F98C4; font-size:36px; padding:7px 0px 9px 38px; margin: 0 0 20px 0;">
+                <div class="col-md-9" style="background-color:#2d5d83; font-size:36px; padding:7px 0px 9px 38px; margin: 0 0 20px 0;">
                     <h3>PROGRAMS</h3>
                 </div>
             </div>
@@ -139,7 +139,7 @@
     <section id="sponsors" class="sponsors-section">
         <div class="container">
             <div class="row" style:"padding:2px; ">
-                <div class="col-md-9" style="background-color:#4F98C4; font-size:36px; padding:7px 0px 9px 38px; margin: 0 0 20px 0;">
+                <div class="col-md-9" style="background-color:#2d5d83; font-size:36px; padding:7px 0px 9px 38px; margin: 0 0 20px 0;">
                     <h3>SPONSORS/COLLABORATORS</h3>
                 </div>
             </div>
@@ -167,7 +167,7 @@ For more information on the Milton Park Recreation Association, please visit <a 
     <section id="resources" class="resources-section">
         <div class="container">
             <div class="row" style:"padding:2px;">
-                <div class="col-md-9" style="background-color:#4F98C4; font-size:36px; padding:7px 0px 9px 38px; margin: 0 0 20px 0;">
+                <div class="col-md-9" style="background-color:#2d5d83; font-size:36px; padding:7px 0px 9px 38px; margin: 0 0 20px 0;">
                     <h3>RESOURCES</h3>
                 </div>
             </div>
