--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">ROOTS</a>
+                <a class="navbar-brand page-scroll" href="#page-top" style="color:white;">ROOTS</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-ex1-collapse" style="color:white;">
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav" style="color:white;">
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                     <li class="hidden">
                         <a class="page-scroll" href="#page-top"></a>
