--- a/index.html
+++ b/index.html
@@ -48,22 +48,22 @@
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-ex1-collapse" style="color:white;">
-                <ul class="nav navbar-nav" style="color:white;">
+                <ul class="nav navbar-nav" >
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                     <li class="hidden">
                         <a class="page-scroll" href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#about" style="color:white;">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#programs">Programs</a>
+                        <a class="page-scroll" href="#programs" style="color:white;">Programs</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#sponsors">Sponsors</a>
+                        <a class="page-scroll" href="#sponsors" style="color:white;">Sponsors</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#resources">Resources</a>
+                        <a class="page-scroll" href="#resources" style="color:white;">Resources</a>
                     </li>
                 </ul>
             </div>
