--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     </a>
                 </div>
                 <div class="col-md-9" style="background-color:#2d5d83; font-size:36px; padding:7px 0px 9px 38px; margin: 0 0 20px 0; color:white;">
-                    <h3>ABOUT</h3>
+                    <h3 style="text-align:left;">ABOUT</h3>
                 </div>
             </div>
             <div class="row" style="text-align:justify; ">
@@ -115,7 +115,7 @@
         <div class="container">
             <div class="row" style:"padding:2px;">
                 <div class="col-md-9" style="color:white; background-color:#2d5d83; font-size:36px; padding:7px 0px 9px 38px; margin: 0 0 20px 0;">
-                    <h3>PROGRAMS</h3>
+                    <h3 style="text-align:left;">PROGRAMS</h3>
                 </div>
             </div>
             <div class="row" style="text-align:justify;">
@@ -140,7 +140,7 @@
         <div class="container">
             <div class="row" style:"padding:2px; ">
                 <div class="col-md-9" style="color:white; background-color:#2d5d83; font-size:36px; padding:7px 0px 9px 38px; margin: 0 0 20px 0;">
-                    <h3>SPONSORS/COLLABORATORS</h3>
+                    <h3 style="text-align:left;">SPONSORS/COLLABORATORS</h3>
                 </div>
             </div>
             <div class="row" style="text-align:justify;">
@@ -168,7 +168,7 @@ For more information on the Milton Park Recreation Association, please visit <a 
         <div class="container">
             <div class="row" style:"padding:2px;">
                 <div class="col-md-9" style="color:white; background-color:#2d5d83; font-size:36px; padding:7px 0px 9px 38px; margin: 0 0 20px 0;">
-                    <h3>RESOURCES</h3>
+                    <h3 style="text-align:left;">RESOURCES</h3>
                 </div>
             </div>
             <div class="row" style="text-align:justify;">
