--- a/index.html
+++ b/index.html
@@ -92,14 +92,12 @@
                 <div class="col-lg-9 col-md-9" style="background-color:#2d5d83; font-size:36px; padding:7px 0px 9px 38px; margin: 0 0 20px 0; color:white;">
                     <h3 style="text-align:left;">ABOUT</h3>
                 </div>
-                <div style="height:72px; overflow:visible;">
-                <div class="col-lg-3 col-md-3" style="width: 250px; background-color:#25c5df; font-size:36px; color: black; margin: 0 0 0 20px; overflow:visible;">
+                <div class="col-lg-3 col-md-3" style="height:72px; overflow:visible; width: 250px; background-color:#25c5df; font-size:36px; color: black; margin: 0 0 0 20px; overflow:visible;">
                     <h3><i class="fa fa-calendar"></i> The Dialogue Project :</h3>
                     <h1 style="text-decoration:strong;">JAN. - APR. <br> 2016</h1>
                     <a href="#" class="btn btn-lg btn-outline">
                         Register Now!
                     </a>
-                    </div>
                 </div>
             
             <!--<div class="row" style="text-align:left; ">-->
