--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
   	<li>Can cope with the normal stresses of life</li>
   	<li>Can work productively and fruitfully</li>
   	<li>Is able to make a contribution to his or her community</li>
-    </ul><br>
-(World Health Organization)<br>
+    </ul><br><br>
+(World Health Organization)<br><br>
  
 Mental illness on the other hand is characterized by alterations in thinking, mood or behaviour – or some combination thereof – associated with significant distress and impaired functioning. This often leads to diagnosis of a clinical condition (based on the Diagnostic and Statistical Manual of Mental Disorders (DSM-5)).
  
-<br>A common misconception is that mental health or well-being and mental illness are opposing ends of a spectrum. Each of these constructs is on it’s own spectrum from low to high. As an example to illustrate this, one may have high mental illness (diagnosed condition) but also high mental health as they may be able to engage in activities such as volunteering or work and may have a good network of support from family and friends. As such, we cannot assume that if an individual has a diagnosed condition, they have poor mental health, and equally so we cannot assume that just because someone does not have a diagnosed or clinical condition that they have high mental health.
+<br><br>A common misconception is that mental health or well-being and mental illness are opposing ends of a spectrum. Each of these constructs is on it’s own spectrum from low to high. As an example to illustrate this, one may have high mental illness (diagnosed condition) but also high mental health as they may be able to engage in activities such as volunteering or work and may have a good network of support from family and friends. As such, we cannot assume that if an individual has a diagnosed condition, they have poor mental health, and equally so we cannot assume that just because someone does not have a diagnosed or clinical condition that they have high mental health.
 </p>
                 </div>
             </div></div>
