--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ Mental illness on the other hand is characterized by alterations in thinking, mo
             <div class="row" style="text-align:left;">
                 <div class="col-md-9" style="padding: 25px; background-color:white; font-size:14px; color:black; font-family:'Open Sans', san-serif; ">
                     <div class="col-md-3">
-                        <i class="fa fa-product-hunt style="font-size:50px;"></i>
+                        <img src="assets/img/program1_dialogue.jpg"></img>
                     </div>
                     <div class="col-md-3">
                         <i class="fa fa-product-hunt style="font-size:50px;"></i>
@@ -141,8 +141,6 @@ Mental illness on the other hand is characterized by alterations in thinking, mo
                     <div class="col-md-3">
                         <i class="fa fa-product-hunt" style="font-size:50px;"></i>
                     </div>
-                    <p><span style="color:#25c5df; font-size:18px;"><b>PROGRAM 1</b></span> <br><br> MORE INFO COMING SOON!</p>
-                    <p><span style="color:#25c5df; font-size:18px;"><b>PROGRAM 2</b></span> <br><br> MORE INFO COMING SOON!</p>
                 </div>
                 </div>
         </div>
@@ -230,7 +228,7 @@ For more information on the Milton Park Recreation Association, please visit <a 
     </footer>
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
-
+    <script type="text/javascript" src="js/tinybox.js"></script>
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
