--- a/index.html
+++ b/index.html
@@ -133,13 +133,13 @@ Mental illness on the other hand is characterized by alterations in thinking, mo
             <div class="row" style="text-align:left;">
                 <div class="col-md-9" style="padding: 25px; background-color:white; font-size:14px; color:black; font-family:'Open Sans', san-serif; ">
                     <div class="col-md-3">
-                        <img src="assets/img/program1_dialogue.jpg"></img>
+                        <img src="./assets/img/program1_dialogue.jpg"></img>
                     </div>
                     <div class="col-md-3">
-                        <i class="fa fa-product-hunt style="font-size:50px;"></i>
+                        <img src="./assets/img/program2_yop.jpg"></img>
                     </div>
                     <div class="col-md-3">
-                        <i class="fa fa-product-hunt" style="font-size:50px;"></i>
+                        <img src="./assets/img/program3_smalltalk.jpg"></img>
                     </div>
                 </div>
                 </div>
