--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <!-- The #page-top ID is part of the scrolling feature - the data-spy and data-target are part of the built-in Bootstrap scrollspy function -->
 
-<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" onLoad="TINY.box.show({html:'Click on the name of the club to see a blurb about them and some of their upcoming events! You can also email them directly or come see them at Activities Night\! A link to a floor plan of all the table locations can be found at the top of each section.',width:400,height:200,opacity:20,topsplit:3})">
 
     <!-- Navigation -->
     <div>
