--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <!-- The #page-top ID is part of the scrolling feature - the data-spy and data-target are part of the built-in Bootstrap scrollspy function -->
 
-<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" onLoad="TINY.box.show({html:'Click on the name of the club to see a blurb about them and some of their upcoming events! You can also email them directly or come see them at Activities Night\! A link to a floor plan of all the table locations can be found at the top of each section.',width:400,height:200,opacity:20,topsplit:3})">
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" >
 
     <!-- Navigation -->
     <div>
@@ -132,13 +132,7 @@ Mental illness on the other hand is characterized by alterations in thinking, mo
             </div>
             <div class="row" style="text-align:left;">
                 <div class="col-md-9" style="padding: 10px; background-color:white; font-size:14px; color:black; font-family:'Open Sans', san-serif; ">
-                    <div onclick="TINY.box.show({html:'THE DIALOGUE PROJECT<br>
-The Dialogue Project is a series of 3 workshops hosted by Roots that will be held at Milton\-Park Community Center in winter of 2016 and will aim to educate youth on themes related to student mental health. The main goal of the project is to enhance the dialogue and deepen the conversation on mental health among youth to eliminate the stigma that is associated with it. Rather than trivializing mental health, the workshops aim to promote understanding and awareness how mental health applies to everyone. It will provide an ongoing and interactive discussion on stigma, determinants of mental health, and issues of mental health that effect youth.<br>
-<br> 
-We aim to have around 12-15 participants in each workshop, and they will cover the following topics:<br>
-Dates \& Themes\: <br>
-March 12th, 2016\: Introduction to mental health, communication and the importance of stigma reduction<br>
-March 19th, 2016\: School and family related anxiety and stress',width:600,height:400,opacity:20,topsplit:3})" class="col-md-3" style="padding:2px; width: 32%">
+                    <div onclick="TINY.box.show({html:'testing testing 123',width:600,height:400,opacity:20,topsplit:3})" class="col-md-3" style="padding:2px; width: 32%">
                         <img src="./assets/img/program1_dialogue.jpg" style="width: 100%; height: auto;"></img>
                     </div>
                     <div class="col-md-3" style="padding:2px; width: 32%">
